tryong to fix pages

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
         </div>
 
-        <div class="carousel_box" onclick="location.href = '/Pages/discord.html'">
+        <div class="carousel_box" onclick="location.href = './discord.html'">
             <img class="carousel_img" src="/SourcesWeb/zombiecraft/botchat.PNG">
             <p class="carousel_title">Discord Bot</p>
             <p class="carousel_desc">Developed a Database system and Discord Bot to link with Minecraft</p>
@@ -106,7 +106,7 @@
                 <img class="carousel_icons" src="/Sources/sql.png">
             </div>
         </div>
-        <div class="carousel_box" onclick="location.href = '/Pages/Slot.html'">
+        <div class="carousel_box" onclick="location.href = './Slot.html'">
             <img class="carousel_img" src="/SourcesWeb/Slot/slotmachine.PNG">
             <p class="carousel_title">Slot Machine</p>
             <p class="carousel_desc">School project with Android Studio. A functional and adicting gambling machine!</p>
@@ -115,7 +115,7 @@
                 <img class="carousel_icons" src="/Sources/android studio.png">
             </div>
         </div>
-        <div class="carousel_box" onclick="location.href = '/Pages/Waw.html'">
+        <div class="carousel_box" onclick="location.href = './Waw.html'">
             <img class="carousel_img" src="/SourcesWeb/WaW/Zombies.jpg">
             <p class="carousel_title">Zombies Map</p>
             <p class="carousel_desc">Used WaW's Radiant mod tool to create my first Zombie map.</p>
