Updated some page reference

--- a/Pages/WaW.html
+++ b/Pages/WaW.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="name" onclick="location.href='../Main.html'" style="cursor: pointer;">
+        <div class="name" onclick="location.href='/index.html'" style="cursor: pointer;">
            <span >Yanick Vigneault</span> 
         </div>
         <div class="top_pill">
