--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
 </head>
 
 <body>
-    <!--div style="position: fixed;
-    top: 0;
-    left: 50%;
-    width: 1px;
-    height: 100%;
-    background-color: red;z-index: 9999;pointer-events: none;"></div-->
         <div class="background_img">
         </div>     
     </div>
@@ -38,10 +32,6 @@
             <a class="pages" href="#/">My Skills</a>
             <a class="pages" href="#Projects">Projects</a>
         </div>
-        <!-- <label class="theme_pill">
-            <input type="checkbox" checked>
-            <span class="slider"></span>
-        </label> -->
         <div class="contact_pill">
             <a href="#email_form">Contact Me</a>
         </div>
@@ -66,7 +56,7 @@
         <p class="font_skills" id="Projects">MY WORK</p>
     </div>
     <div class="carousel_container" >      
-        <div class="carousel_box" onclick="location.href = './SoulHarbinger.html'">
+        <div class="carousel_box" onclick="location.href = '/Pages/SoulHarbinger.html'">
             <img class="carousel_img" src="/SourcesWeb/Soul/UnityGame1.PNG">
             <p class="carousel_title">Soul Harbinger</p>
             <p class="carousel_desc">An adventure RPG following a necromancer cursed by his own creation.</p>
@@ -95,7 +85,7 @@
             </div>
         </div>
 
-        <div class="carousel_box" onclick="location.href = './discord.html'">
+        <div class="carousel_box" onclick="location.href = '/Pages/discord.html'">
             <img class="carousel_img" src="/SourcesWeb/zombiecraft/botchat.PNG">
             <p class="carousel_title">Discord Bot</p>
             <p class="carousel_desc">Developed a Database system and Discord Bot to link with Minecraft</p>
@@ -106,7 +96,7 @@
                 <img class="carousel_icons" src="/Sources/sql.png">
             </div>
         </div>
-        <div class="carousel_box" onclick="location.href = './Slot.html'">
+        <div class="carousel_box" onclick="location.href = '/Pages/Slot.html'">
             <img class="carousel_img" src="/SourcesWeb/Slot/slotmachine.PNG">
             <p class="carousel_title">Slot Machine</p>
             <p class="carousel_desc">School project with Android Studio. A functional and adicting gambling machine!</p>
@@ -115,7 +105,7 @@
                 <img class="carousel_icons" src="/Sources/android studio.png">
             </div>
         </div>
-        <div class="carousel_box" onclick="location.href = './Waw.html'">
+        <div class="carousel_box" onclick="location.href = '/Pages/Waw.html'">
             <img class="carousel_img" src="/SourcesWeb/WaW/Zombies.jpg">
             <p class="carousel_title">Zombies Map</p>
             <p class="carousel_desc">Used WaW's Radiant mod tool to create my first Zombie map.</p>
@@ -123,7 +113,7 @@
                 <img class="carousel_icons" src="/Sources/waw.png">
             </div>
         </div>
-        <div class="carousel_box" onclick="location.href = './CSGO.html'">
+        <div class="carousel_box" onclick="location.href = '/Pages/CSGO.html'">
             <img class="carousel_img" src="/SourcesWeb/CSGO/SSRush2.PNG">
             <p class="carousel_title">CSGO Map</p>
             <p class="carousel_desc">Used Source's Hammer SDK tool to create some custom maps.</p>
