--- a/Pages/WaW.html
+++ b/Pages/WaW.html
@@ -7,8 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Styles.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Media.css'>
-    <!--<link rel='stylesheet' type='text/css' media='screen' href='../Projects_Template.css'> /-->
-     <link rel='stylesheet' type='text/css' media='screen' href='Styles/Waw.css'> 
+     <link rel='stylesheet' type='text/css' media='screen' href='./Styles/Waw.css'> 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +16,7 @@
 
     <script src='functions.js'></script>
     
-    <link rel="icon" type="image/png" href="Sources/message-programming.png"/>
+    <link rel="icon" type="image/png" href="/Sources/message-programming.png"/>
 </head>
 <body>
     <nav class="navbar">
