--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
        
     </div>
     <div style="display:flex; justify-content: center;">
-        <button class="button_down" onclick="scrolldown()"><i class="arrow"></i></button>
+        <button class="button_down" onclick="window.location.href='#Projects';"><i class="arrow"></i></button>
     </div>
     <div style="display: flex; flex-direction: row; justify-content: center;">
         <img src="/Sources/folder.png" style="height: 60px; width: auto; padding-right: 20px; align-self: center;">
