--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <img class="carousel_icons" src="/Sources/android studio.png">
             </div>
         </div>
-        <div class="carousel_box" onclick="location.href = '/Pages/Waw.html'">
+        <div class="carousel_box" onclick="location.href = '/Pages/WaW.html'">
             <img class="carousel_img" src="/SourcesWeb/WaW/Zombies.jpg">
             <p class="carousel_title">Zombies Map</p>
             <p class="carousel_desc">Used WaW's Radiant mod tool to create my first Zombie map.</p>
