Added some Animations and fixed some layouts

--- a/Pages/SoulHarbinger.html
+++ b/Pages/SoulHarbinger.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Styles.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Media.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../Projects_Template.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./Styles/SoulHarbinger.css'>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,22 +30,23 @@
             <a href="#/" class="contact_pill" >Contact Me</a>
     </nav>
 
-    <div class="thumbnail_Container" style="--thumbnail-bg: url('../SourcesWeb/Soul/UnityGame1.PNG');">     
+    <div id="main">
+
+    <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/Graveyard.PNG');">     
         <div class="image_Title" id="Skills">Soul Harbinger</div>
     </div>
-    <div class="project_container">
-        <div class="project_box">
-            <img>
-            <p>Testing</p>
-        </div>
-        <div class="project_box">    
-            <p>Testing</p>
-            <img>
-        </div>
-        <div class="project_box">
-            <img>
-            <p>Testing</p>
-        </div>
+
+    <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/UnityGame.png');">     
+        <div class="image_Title_sub" id="Skills">Gameplay</div>
+    </div>
+    
+    <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/Bridge.PNG');">    
+        <div class="image_Title_sub" id="Skills">Models/Textures</div>
+    </div>
+    <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/Tavern.PNG');">    
+        <div class="image_Title_sub" id="Skills">Music/Sounds</div>
+    </div>
+
     </div>
 </body>
 </html>
