--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div style="display:flex; justify-content: center;">
         <button class="button_down" onclick="window.location.href='#Projects';"><i class="arrow"></i></button>
     </div>
-    <div style="display: flex; flex-direction: row; justify-content: center;">
+    <div class="sub_Header">
         <img src="/Sources/folder.png" style="height: 60px; width: auto; padding-right: 20px; align-self: center;">
         <p class="font_skills" id="Projects">MY WORK</p>
     </div>
@@ -66,14 +66,6 @@
                 <img class="carousel_icons" src="/Sources/blender.png">
                 <img class="carousel_icons" src="/Sources/gimp.png">
             </div>  
-        </div>
-        <div class="carousel_box">
-            <img class="carousel_img" src="/SourcesWeb/website.PNG">
-            <p class="carousel_title">Web Portfolio</p>
-            <p class="carousel_desc">Developed a website showcasing my path and projects throughout the years.</p>
-            <div class="carousel_icon_container">
-                <img class="carousel_icons" src="/Sources/hcj.png">
-            </div>
         </div>
         <div class="carousel_box">
             <img class="carousel_img" src="/SourcesWeb/UnityGame2.PNG">
@@ -124,9 +116,9 @@
         </div>
     </div>
     
-    <div style="display: flex; flex-direction: row; justify-content: center;">
+    <div class="sub_Header" >
         <img src="/Sources/gear.png" style="height: 60px; width: auto; padding-right: 20px; align-self: center;">
-        <p class="font_skills" id="Skills">SKILLS</p>
+        <p class="font_skills" id="Skills">MY SKILLS</p>
     </div>
   
     <div class="skill_container">
