--- a/Pages/Discord.html
+++ b/Pages/Discord.html
@@ -67,18 +67,11 @@
                 <img src="../SourcesWeb/zombiecraft/Chat.JPG">       
             </div>
             <div class="project_Title_2">
-            <p>Where is it now?</p>
+            <p>TODO!</p>
             
             <div class="project_Paragraph">    
             <p>
-                I documented some of my progress with videos on 
-                <a href="https://www.youtube.com/watch?v=AqAmtPoxcwA&list=PLKiHUG_V21xCz-ZnmgGYscw3fEv6Es9gp&index=1" target="_blank">
-                    <i style="color:crimson;"><u>YouTube</i></u></a>, 
-                but unfortunately, the project was never completed and eventually abandoned. 
-                I worked on elements such as 'spawners,' 'zoning,' and progression systems like doors and wall weapons, 
-                however some of the more advanced gameplay features were beyond my skill level at the time. 
-                Despite this, I still look back on it from time to time as a valuable learning experience 
-                that introduced me to the fundamentals of level design.</p>         
+                TODO!</p>         
         </div>
         </div>      
 
