--- a/Pages/WaW.html
+++ b/Pages/WaW.html
@@ -41,7 +41,7 @@
                 sparking a passion I didn’t know I had. Creating a custom zombie map for 
                 <i style="color: lightsalmon;">Call of Duty: World at War</i> was an incredibly fun experience, combining my love for one of my favorite game modes of all time with hands-on learning. 
                 </p><p>
-                Through this project, I gained entry-level knowledge in level design, compiling, and environment creation, 
+                Through this project, I gained basic knowledge in level design, compiling, and environment creation, 
                 which further inspired my interest in game development.</p>         
         </div>
         </div>      
@@ -61,12 +61,12 @@
             
             <div class="project_Paragraph">    
             <p>
-                I documented some of my progress with videos on 
+                Unfortunately, the project was never completed and eventually abandoned.
+                However, I did upload some of my progress with videos on 
                 <a href="https://www.youtube.com/watch?v=AqAmtPoxcwA&list=PLKiHUG_V21xCz-ZnmgGYscw3fEv6Es9gp&index=1" target="_blank">
-                    <i style="color:crimson;"><u>YouTube</i></u></a>, 
-                but unfortunately, the project was never completed and eventually abandoned. 
-                I worked on elements such as 'spawners,' 'zoning,' and progression systems like doors and wall weapons, 
-                however some of the more advanced gameplay features were beyond my skill level at the time. 
+                    <i style="color:crimson;"><u>YouTube</i></u></a>.  
+                I worked on elements such as 'spawners,' 'zoning,' and progression systems like doors and wall weapons. 
+                Some of the more advanced gameplay features were beyond my skill level at the time like "Easter eggs" for exemple. 
                 Despite this, I still look back on it from time to time as a valuable learning experience 
                 that introduced me to the fundamentals of level design.</p>         
         </div>
