Redid grid for projects and other tweaks

--- a/Pages/CSGO.html
+++ b/Pages/CSGO.html
@@ -19,15 +19,14 @@
 <body>
 
     <nav class="navbar">
-        <div class="name" onclick="location.href='/index.html'" style="cursor: pointer;">
-           <span >Yanick Vigneault</span> 
+        <div class="name">
+           Yanick Vigneault
+        </div>                   
+
+        <div class="nav_right"> 
+            <a class="about_pill" href="/Pages/About.html">About Me</a>
+            <a class="contact_pill" onclick="ScrollTo('email_form')">Contact Me!</a>
         </div>
-        <div class="top_pill">
-            <a class="pages"href="#/">About Me</a>
-            <a class="pages" href="#/">My Skills</a>
-            <a class="pages" href="#/">Projects</a>
-        </div>
-            <a href="#/" class="contact_pill" >Contact Me</a>
     </nav>
         
     <div class="thumbnail_Container" style="--thumbnail-bg: url('../SourcesWeb/CSGO/SSOB.PNG');">     
