Cards tweaked and layout redone on a coupe of projects

--- a/Pages/WaW.html
+++ b/Pages/WaW.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="name">
+        <div class="name" onclick="location.href = '/index.html'">
            Yanick Vigneault
         </div>                   
 
