--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
         <img src="/Sources/folder.png" style="height: 60px; width: auto; padding-right: 20px; align-self: center;">
         <p class="font_skills" id="Projects">PROJECTS</p>
     </div>
-    <div class="carousel_container" >      
-        <div class="carousel_box" onclick="location.href = '/Pages/SoulHarbinger.html'">
+    <div class="carousel_container" >    
+        
+        <div class="carousel_box" onclick="location.href = '/Pages/SoulHarbinger.html'">  
+            <span class="date">On Going</span>                    
             <img class="carousel_img" src="/SourcesWeb/Soul/Graveyard.PNG">
             <p class="carousel_desc">An adventure RPG following a necromancer cursed by his own creation.</p>
             <div class="carousel_icon_container">
@@ -64,6 +66,7 @@
             </div>  
         </div>
         <div class="carousel_box">
+            <span class="date">On Going</span>
             <img class="carousel_img" src="/SourcesWeb/ScuffedDodgeBall.JPG">
             <p class="carousel_desc">My first dive into Multliplayer Networking Behaviour.</p>
             <div class="carousel_icon_container">
@@ -73,6 +76,7 @@
         </div>
 
         <div class="carousel_box" onclick="location.href = '/Pages/discord.html'">
+            <span class="date">2023</span>
             <img class="carousel_img" src="/SourcesWeb/zombiecraft/botchat.PNG">
             <p class="carousel_desc">Developed a Database system and Discord Bot to link with Minecraft</p>
             <div class="carousel_icon_container">
@@ -83,26 +87,29 @@
             </div>
         </div>
         <div class="carousel_box" onclick="location.href = '/Pages/Slot.html'">
+            <span class="date">2022</span> 
             <img class="carousel_img" src="/SourcesWeb/Slot/slotmachine.PNG">
             <p class="carousel_desc">School project with Android Studio. A functional and adicting gambling machine!</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/kotlin.png">
                 <img class="carousel_icons" src="/Sources/android studio.png">
             </div>
-        </div>
-        <div class="carousel_box" onclick="location.href = '/Pages/WaW.html'">
-            <img class="carousel_img" src="/SourcesWeb/WaW/Zombies.jpg">
-            <p class="carousel_desc">Used WaW's Radiant mod tool to create my first Zombie map.</p>
-            <div class="carousel_icon_container">
-                <img class="carousel_icons" src="/Sources/waw.png">
-            </div>
-        </div>
+        </div>     
         <div class="carousel_box" onclick="location.href = '/Pages/CSGO.html'">
+            <span class="date">2018</span>
             <img class="carousel_img" src="/SourcesWeb/CSGO/SSOB.PNG">
             <p class="carousel_desc">Used Source's Hammer SDK tool to create some custom maps.</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/csgo.png">
                 <img class="carousel_icons" src="/Sources/Hammer_splash.png">
+            </div>
+        </div>
+        <div class="carousel_box" onclick="location.href = '/Pages/WaW.html'">
+            <span class="date">2018</span>
+            <img class="carousel_img" src="/SourcesWeb/WaW/Zombies.jpg">
+            <p class="carousel_desc">Used WaW's Radiant mod tool to create my first Zombie map.</p>
+            <div class="carousel_icon_container">
+                <img class="carousel_icons" src="/Sources/waw.png">
             </div>
         </div>
     </div>
