--- a/Pages/Slot.html
+++ b/Pages/Slot.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Styles.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='../Media.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../Projects_Template.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./Styles/Slot.css'>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,18 +17,17 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="name" onclick="location.href='/index.html'" style="cursor: pointer;">
-           <span >Yanick Vigneault</span> 
+        <div class="name" onclick="location.href = '/index.html'">
+           Yanick Vigneault
+        </div>                   
+
+        <div class="nav_right"> 
+            <a class="about_pill" href="/Pages/About.html">About Me</a>
+            <a class="contact_pill" onclick="ScrollTo('email_form')">Contact Me!</a>
         </div>
-        <div class="top_pill">
-            <a class="pages"href="#/">About Me</a>
-            <a class="pages" href="#/">My Skills</a>
-            <a class="pages" href="#/">Projects</a>
-        </div>
-            <a href="#/" class="contact_pill" >Contact Me</a>
     </nav>
 
-    <div class="thumbnail_Container"style="--thumbnail-bg: url('../SourcesWeb/Slot/Thumbnail.png');">     
+    <div class="thumbnail_Container"style="--thumbnail-bg: url('/SourcesWeb/Slot/Thumbnail.png');">     
 
         <div class="image_Title" id="Skills">Slot Machine</div>
     </div>
