Fixed page references to about me and contact

--- a/Pages/CSGO.html
+++ b/Pages/CSGO.html
@@ -25,7 +25,7 @@
 
         <div class="nav_right"> 
             <a class="about_pill" href="/Pages/About.html">About Me</a>
-            <a class="contact_pill" onclick="ScrollTo('email_form')">Contact Me!</a>
+            <a class="contact_pill" href="/Pages/Contact.html">Contact Me!</a>
         </div>
     </nav>
         
@@ -44,7 +44,7 @@
                 The tactical gameplay and strategic depth of the game inspired my interest in level design. 
                 As I spent more time playing, I became fascinated with how maps were created and how different environments shaped gameplay. 
                  When I discovered that <i style="color: var(--ACCENT);">Source</i> had tools to create custom maps, 
-                 I couldn’t wait to dive in. In highschool, I started exploring the map editor; <a href="https://developer.valvesoftware.com/wiki/Valve_Hammer_Editor" target="_blank"><i style="color: plum;">Hammer</i></a>, experimenting with props and rendering. 
+                 I couldn’t wait to dive in. In highschool, I started exploring the map editor; <a href="https://developer.valvesoftware.com/wiki/Valve_Hammer_Editor" target="_blank"><i style="color: plum;"><u>Hammer</u></i></a>, experimenting with props and rendering. 
                  It became my first step into level design, and I’ve loved it ever since.</p>         
         </div>
         </div>      
