--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -26,8 +26,8 @@
         </div>                   
 
         <div class="nav_right"> 
-            <a class="about_pill" onclick="GoBack();">Go Back!</a>
-            <a class="contact_pill" onclick="ScrollTo('email_form')">Contact Me!</a>
+            <a class="about_pill" href="/Pages/About.html">About me!</a>
+            <a class="contact_pill" onclick="GoBack();">Go Back!</a>
         </div>
     </nav>
 
