--- a/Pages/SoulHarbinger.html
+++ b/Pages/SoulHarbinger.html
@@ -22,8 +22,8 @@
         </div>                   
 
         <div class="nav_right"> 
-            <a class="about_pill" href="/Pages/About.html">About Me</a>
-            <a class="contact_pill" onclick="ScrollTo('email_form')">Contact Me!</a>
+            <a class="about_pill" href="/Pages/About.html">About me!</a>
+            <a class="contact_pill" href="/Pages/Contact.html">Contact Me!</a>
         </div>
     </nav>
 
@@ -34,14 +34,14 @@
         </div>
 
         <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/UnityGame.png');">     
-            <div class="image_Title_sub">Gameplay</div>
+            <div class="image_Title">Gameplay</div>
         </div>
         
         <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/Bridge.PNG');">    
-            <div class="image_Title_sub" >Models/Textures</div>
+            <div class="image_Title" >Models/Textures</div>
         </div>
         <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/Tavern.PNG');">    
-            <div class="image_Title_sub" >Music/Sounds</div>
+            <div class="image_Title" >Music/Sounds</div>
         </div>
 
     </div>
