--- a/Pages/WaW.html
+++ b/Pages/WaW.html
@@ -23,8 +23,8 @@
         </div>                   
 
         <div class="nav_right"> 
-            <a class="about_pill" href="/Pages/About.html">About Me</a>
-            <a class="contact_pill" onclick="ScrollTo('email_form')">Contact Me!</a>
+            <a class="about_pill" href="/Pages/About.html">About me!</a>
+            <a class="contact_pill" href="/Pages/Contact.html">Contact Me!</a>
         </div>
     </nav>
 
