--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         </div>     
     </div>
     <nav class="navbar">
-        <div class="name">
+        <div class="name" onclick="">
            Yanick Vigneault
         </div>                   
 
         <div class="nav_right"> 
             <a class="about_pill" href="/Pages/About.html">About Me!</a>
-            <a class="contact_pill" onclick="ScrollTo('email_form')">Contact Me!</a>
+            <a class="contact_pill" href="/Pages/Contact.html">Contact Me!</a>
         </div>
     </nav>
     <div class="header">
