page reference fix

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
 
-        <div class="carousel_box" onclick="location.href = '/Pages/discord.html'">
+        <div class="carousel_box" onclick="location.href = '/Pages/Discord.html'">
             <span class="date">2023</span>
             <img class="carousel_img" src="/SourcesWeb/zombiecraft/botchat.PNG">
             <p class="carousel_desc">Developed a Database system and Discord Bot to link with Minecraft</p>
