--- a/Pages/About.html
+++ b/Pages/About.html
@@ -6,9 +6,8 @@
     <title>Yanick Vigneault</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='/Styles.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/Carousel.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='/Form.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='/Media.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='/Pages/Styles/About.css'>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +30,9 @@
         </div>
     </nav>
 
+    <div class="background">
+        
+    </div>
     
 
 </body>
