--- a/Pages/SoulHarbinger.html
+++ b/Pages/SoulHarbinger.html
@@ -16,32 +16,21 @@
     <link rel="icon" type="image/png" href="Sources/message-programming.png"/>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="name">
-           Yanick Vigneault
-        </div>                   
-
-        <div class="nav_right"> 
-            <a class="about_pill" href="/Pages/About.html">About me!</a>
-            <a class="contact_pill" href="/Pages/Contact.html">Contact Me!</a>
-        </div>
-    </nav>
+    <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/Graveyard.PNG');">     
+        <div class="thumbnail_Title" id="Skills">Soul Harbinger</div>
+    </div>
 
     <div id="main">
 
-        <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/UnityGame1.PNG');" onclick="reveal('test')">     
-            <div class="image_Title" >Soul Harbinger</div>
-        </div>
-
-        <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/UnityGame.png');">     
-            <div class="image_Title">Gameplay</div>
+        <div class="" style="--thumbnail-bg: url('/SourcesWeb/Soul/UnityGame.png');">     
+            <div class="">Gameplay</div>
         </div>
         
-        <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/Bridge.PNG');">    
-            <div class="image_Title" >Models/Textures</div>
+        <div class="" style="--thumbnail-bg: url('/SourcesWeb/Soul/Bridge.PNG');">    
+            <div class="" >Models/Textures</div>
         </div>
-        <div class="thumbnail_Container" style="--thumbnail-bg: url('/SourcesWeb/Soul/Tavern.PNG');">    
-            <div class="image_Title" >Music/Sounds</div>
+        <div class="" style="--thumbnail-bg: url('/SourcesWeb/Soul/Tavern.PNG');">    
+            <div class="" >Music/Sounds</div>
         </div>
 
     </div>
