--- a/index.html
+++ b/index.html
@@ -21,19 +21,9 @@
 
 <body>
 
-        <div class="background_img">
-        </div>     
-    </div>
-    <nav class="navbar">
-        <div class="name" onclick="">
-           Yanick Vigneault
-        </div>                   
-
-        <div class="nav_right"> 
-            <a class="about_pill" href="/Pages/About.html">About Me!</a>
-            <a class="contact_pill" href="/Pages/Contact.html">Contact Me!</a>
-        </div>
-    </nav>
+    <div class="background_img">
+    </div>     
+    
     <div class="header">
         <p class="message_code"></p>
         <p class="font_header">Hi,<br class="br">I'M YANICK </p>
@@ -42,8 +32,12 @@
             <span style="color: #dda0dd;">lines</span> of 
             <span style="color: plum;">logic</span> and 
             <span style="color:var(--Mint)">pixels</span> of 
-            <span style="color: var(--Mint)">passion</span>."<br><i class="note">-chatgpt</i></p>
-       
+            <span style="color: var(--Mint)">passion</span>."<br><i class="note">-chatgpt</i>
+        </p>
+        <p style="display: flex;">
+            <a class="link_pill" href="/Pages/About.html">About Me!</a> 
+            <a class="link_pill" href="/Pages/Contact.html">Contact Me!</a>
+        </p>
     </div>
     <div style="display:flex; justify-content: center;">
         <button class="button_down" onclick="ScrollTo('Projects')"><i class="arrow"></i></button>
