About me in progress

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     
     <div class="header">
         <p class="message_code"></p>
-        <p class="font_header">Hi,<br class="br">I'M YANICK </p>
-        <p class="font_subHead">VIDEO GAME DEVELOPER <span style="color: gray;">/</span> SOFTWARE PROGRAMMER<br><i class="note">Fr/Eng</i></p>
-        <p class="font_Quote">“Where imagination becomes reality and players embark on journeys we've woven in 
+        <p class="font_header">Hi,<br class="br">I'm Yanick Vigneault </p>
+        <p class="font_subHead">Video Game Developer <span style="color: gray;">/</span> Software Programmer<br><i class="note">Fr/Eng</i></p>
+        <p class="font_Quote">"Where imagination becomes reality and players embark on journeys we've woven in 
             <span style="color: #dda0dd;">lines</span> of 
             <span style="color: plum;">logic</span> and 
             <span style="color:var(--Mint)">pixels</span> of 
