Added Brooke, and fixed some css stuff

--- a/Pages/Discord.html
+++ b/Pages/Discord.html
@@ -39,6 +39,7 @@
                 Later, I developed a Discord bot that integrated in-game features with Discord, enhancing community interaction and server management.
              
             <br>
+            About them :
                 <a href="https://zc.stephcraft.net/" target="_blank">
                     <i style="color: var(--Mint);"><u>Website</i></u></a>
               
@@ -49,12 +50,12 @@
         </div>
         </div>      
         <div class="project_Image">
-            <img src="/SourcesWeb/zombiecraft/Chat.JPG">       
+            <img src="/SourcesWeb/zombiecraft/Screenshot_6-2-2025_174438_.jpeg">       
         </div>
     </div>
     <div class="project_container_2">        
             <div class="project_Image">
-                <img src="/SourcesWeb/zombiecraft/Screenshot_6-2-2025_174438_.jpeg">       
+                <img src="/SourcesWeb/zombiecraft/Chat.JPG">       
             </div>
             <div class="project_Title_2">
             <p>TODO!</p>
