--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     </div>
     <div class="carousel_container" >    
         
-        <div class="carousel_box" onclick="location.href = '/Pages/SoulHarbinger.html'">  
+        <div class="carousel_box" onclick="location.href = '/Pages/SoulHarbinger.html'">
+            <span class="project_title">Game</span>    
             <span class="date">On Going</span>                    
             <img class="carousel_img" src="/SourcesWeb/Soul/Graveyard.PNG">
             <p class="carousel_desc">An adventure RPG following a necromancer cursed by his own creation.</p>
@@ -59,7 +60,8 @@
                 <img class="carousel_icons" src="/Sources/gimp.png">
             </div>  
         </div>
-        <div class="carousel_box">
+        <div class="carousel_box" onclick="alert('This Page is not yet completed')">
+            <span class="project_title">Game</span>
             <span class="date">On Going</span>
             <img class="carousel_img" src="/SourcesWeb/ScuffedDodgeBall.JPG">
             <p class="carousel_desc">My first dive into Multliplayer Networking Behaviour.</p>
@@ -70,6 +72,7 @@
         </div>
 
         <div class="carousel_box" onclick="location.href = '/Pages/Discord.html'">
+            <span class="project_title">Internship</span>
             <span class="date">2023</span>
             <img class="carousel_img" src="/SourcesWeb/zombiecraft/botchat.PNG">
             <p class="carousel_desc">Developed a Database system and Discord Bot to link with Minecraft</p>
@@ -80,16 +83,30 @@
                 <img class="carousel_icons" src="/Sources/sql.png">
             </div>
         </div>
+        <div class="carousel_box" onclick="alert('This Page is not yet completed')">
+            <span class="project_title">School Project</span>
+            <span class="date">2023</span>
+            <img class="carousel_img" src="/SourcesWeb/BrookeCo/BrookeCo.PNG">
+            <p class="carousel_desc">E-Commerce for films, games and books.</p>
+            <div class="carousel_icon_container">
+                <img class="carousel_icons" src="/Sources/hcj.png">
+                <img class="carousel_icons" src="/Sources/sql.png">
+                <img class="carousel_icons" src="/Sources/Heroku.png">
+            </div>
+        </div>
         <div class="carousel_box" onclick="location.href = '/Pages/Slot.html'">
+            <span class="project_title">School Project</span>
             <span class="date">2022</span> 
             <img class="carousel_img" src="/SourcesWeb/Slot/slotmachine.PNG">
-            <p class="carousel_desc">School project with Android Studio. A functional and adicting gambling machine!</p>
+            <p class="carousel_desc">With Android Studio. A functional and adicting gambling Slot Machine!</p>
             <div class="carousel_icon_container">
                 <img class="carousel_icons" src="/Sources/kotlin.png">
                 <img class="carousel_icons" src="/Sources/android studio.png">
+                <img class="carousel_icons" src="/Sources/Heroku.png">
             </div>
         </div>     
         <div class="carousel_box" onclick="location.href = '/Pages/CSGO.html'">
+            <span class="project_title">Level Design</span>
             <span class="date">2018</span>
             <img class="carousel_img" src="/SourcesWeb/CSGO/SSOB.PNG">
             <p class="carousel_desc">Used Source's Hammer SDK tool to create some custom maps.</p>
@@ -99,6 +116,7 @@
             </div>
         </div>
         <div class="carousel_box" onclick="location.href = '/Pages/WaW.html'">
+            <span class="project_title">Level Design</span>
             <span class="date">2018</span>
             <img class="carousel_img" src="/SourcesWeb/WaW/Zombies.jpg">
             <p class="carousel_desc">Used WaW's Radiant mod tool to create my first Zombie map.</p>
